@@ -39,6 +39,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiFunction;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -46,7 +48,10 @@ import java.util.stream.Stream;
  * Convert our query objects to an Elasticsearch Query DSL query.
  */
 public class SearchExpressionQueryBuilder {
+
     private static final String DELIMITER = ",";
+    private static final Pattern WILDCARD_PATTERN = Pattern.compile(".*[*?].*");
+    private static final Pattern QUOTED_PATTERN = Pattern.compile("^\"(.+)\"$");
     private final Map<String, ElasticIndexField> indexFieldsMap;
     private final WordListProvider wordListProvider;
     private final DateTimeSettings dateTimeSettings;
@@ -85,9 +90,8 @@ public class SearchExpressionQueryBuilder {
                 final ExpressionOperator operator = (ExpressionOperator) item;
                 if (operatorHasChildren(operator)) {
                     final List<QueryBuilder> innerChildQueries = operator.getChildren().stream()
-                        .map(this::getQuery)
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+                            .map(this::getQuery)
+                            .filter(Objects::nonNull).toList();
 
                     BoolQueryBuilder boolQueryBuilder = QueryBuilders.boolQuery();
                     final Op op = operator.getOp();
@@ -120,7 +124,7 @@ public class SearchExpressionQueryBuilder {
             value = value.trim();
         }
 
-        // Try and find the referenced field.
+        // Validate the field
         if (field == null || field.length() == 0) {
             throw new IllegalArgumentException("Field not set");
         }
@@ -130,67 +134,117 @@ public class SearchExpressionQueryBuilder {
         }
         final String fieldName = indexField.getFieldName();
 
-        // Ensure an appropriate value has been provided for the condition type.
+        // Validate the expression
+        if (value == null || value.isEmpty()) {
+            return null;
+        }
         if (Condition.IN_DICTIONARY.equals(condition)) {
             if (docRef == null || docRef.getUuid() == null) {
                 throw new IllegalArgumentException("Dictionary not set for field: " + field);
             }
-        } else {
-            if (value == null || value.length() == 0) {
-                return null;
-            }
         }
-        if (Condition.IS_DOC_REF.equals(condition)) {
-            if (docRef == null || docRef.getUuid() == null) {
-                throw new IllegalArgumentException("Doc Ref not set for field: " + field);
-            }
+
+        // Special case: if the expression is a wildcard, use the `exists` query
+        if (value.equals("*")) {
+            return QueryBuilders.existsQuery(fieldName);
         }
 
         // Create a query based on the field type and condition.
         final ElasticIndexFieldType elasticFieldType = indexField.getFieldUse();
         if (indexField.getFieldUse().isNumeric()) {
-            return buildNumericQuery(condition, indexField, fieldName, value, this::getNumber, docRef);
+            return buildScalarQuery(condition, indexField, fieldName, value, this::getNumber, docRef);
         } else if (elasticFieldType.equals(ElasticIndexFieldType.FLOAT)) {
-            return buildNumericQuery(condition, indexField, fieldName, value, this::getFloat, docRef);
+            return buildScalarQuery(condition, indexField, fieldName, value, this::getFloat, docRef);
         } else if (elasticFieldType.equals(ElasticIndexFieldType.DOUBLE)) {
-            return buildNumericQuery(condition, indexField, fieldName, value, this::getDouble, docRef);
+            return buildScalarQuery(condition, indexField, fieldName, value, this::getDouble, docRef);
         } else if (elasticFieldType.equals(ElasticIndexFieldType.DATE)) {
-            return buildNumericQuery(condition, indexField, fieldName, value, this::getDate, docRef);
+            return buildScalarQuery(condition, indexField, fieldName, value, this::getDate, docRef);
         } else {
-            // A string-based term
+            return buildStringQuery(condition, value, docRef, indexField, fieldName);
+        }
+    }
+
+    private QueryBuilder buildStringQuery(final Condition condition,
+                                          final String expression,
+                                          final DocRef docRef,
+                                          final ElasticIndexField indexField,
+                                          final String fieldName) {
+        final List<String> terms = tokenizeExpression(expression).filter(term -> !term.isEmpty()).toList();
+        if (terms.isEmpty()) {
+            return null;
+        }
+
+        if (indexField.getFieldType().equals("keyword")) {
+            // Elasticsearch field mapping type is `keyword`, so generate a term-level query
             switch (condition) {
                 case EQUALS:
-                    return QueryBuilders
-                            .queryStringQuery(value)
-                            .field(fieldName)
-                            .analyzeWildcard(true);
-                case CONTAINS:
-                    // Note: This is redundant as `Term::setCondition` in `stroom-core-client` prevents this condition
-                    // from being selected.
-
-                    // All terms must match
-                    BoolQueryBuilder mustQuery = QueryBuilders.boolQuery();
-                    tokenizeExpression(value).forEach(term -> {
-                        mustQuery.must(QueryBuilders.termQuery(fieldName, term));
-                    });
-                    return mustQuery;
+                    return buildKeywordQuery(fieldName, expression);
+                case MATCHES_REGEX:
+                    return QueryBuilders.regexpQuery(fieldName, expression);
                 case IN:
-                    // One or more terms must match
-                    return QueryBuilders
-                            .termsQuery(fieldName, tokenizeExpression(value));
+                    if (terms.size() > 1) {
+                        final BoolQueryBuilder boolQuery = QueryBuilders.boolQuery();
+                        terms.forEach(term -> boolQuery.should(buildKeywordQuery(fieldName, term)));
+                        return boolQuery;
+                    } else {
+                        return buildKeywordQuery(fieldName, expression);
+                    }
                 case IN_DICTIONARY:
                     return buildDictionaryQuery(fieldName, docRef, indexField);
-                case IS_DOC_REF:
-                    return QueryBuilders
-                            .termQuery(fieldName, docRef.getUuid());
                 default:
-                    throw new RuntimeException("Unexpected condition '" + condition.getDisplayValue() + "' for "
+                    throw new UnsupportedOperationException("Unsupported condition '" + condition.getDisplayValue() +
+                            "' for " + indexField.getFieldUse().getDisplayValue() + " field type");
+            }
+        } else {
+            // This is a type other than `keyword`, such as `text` or `wildcard`. Perform a full-text match.
+            switch (condition) {
+                case EQUALS:
+                    return buildTextQuery(fieldName, expression);
+                case MATCHES_REGEX:
+                    return QueryBuilders.regexpQuery(fieldName, expression);
+                case IN:
+                    if (terms.size() > 1) {
+                        final BoolQueryBuilder boolQuery = QueryBuilders.boolQuery();
+                        terms.forEach(term -> boolQuery.should(buildTextQuery(fieldName, term)));
+                        return boolQuery;
+                    } else {
+                        return buildTextQuery(fieldName, expression);
+                    }
+                case IN_DICTIONARY:
+                    return buildDictionaryQuery(fieldName, docRef, indexField);
+                default:
+                    throw new RuntimeException("Unsupported condition '" + condition.getDisplayValue() + "' for "
                             + indexField.getFieldUse().getDisplayValue() + " field type");
             }
         }
     }
 
-    private <T extends Number> QueryBuilder buildNumericQuery(
+    /**
+     * Creates an Elasticsearch query for a `keyword` field appropriate for the expression content
+     */
+    private QueryBuilder buildKeywordQuery(final String fieldName, final String expression) {
+        final Matcher quotedMatcher = QUOTED_PATTERN.matcher(expression);
+        if (quotedMatcher.matches()) {
+            // Expression is in quotes, so perform an exact match
+            return QueryBuilders.termQuery(fieldName, quotedMatcher.group(1));
+        } else if (WILDCARD_PATTERN.matcher(expression).matches()) {
+            // Expression is a wildcard pattern, so return a wildcard query
+            return QueryBuilders.wildcardQuery(fieldName, expression)
+                    .caseInsensitive(true);
+        } else {
+            // Perform an exact match on the provided term
+            return QueryBuilders.termQuery(fieldName, expression);
+        }
+    }
+
+    private QueryBuilder buildTextQuery(final String fieldName, final String expression) {
+        // Contains wildcard chars, so use a query string query, which supports these
+        return QueryBuilders.queryStringQuery(expression)
+                .field(fieldName)
+                .analyzeWildcard(true);
+    }
+
+    private <T extends Number> QueryBuilder buildScalarQuery(
             final ExpressionTerm.Condition condition, final ElasticIndexField indexField, final String fieldName,
             final String fieldValue, BiFunction<String, String, T> valueParser, final DocRef docRef
     ) {
@@ -252,14 +306,15 @@ public class SearchExpressionQueryBuilder {
     /**
      * Split an expression into is component terms. Useful for extracting terms for use with "in" or "contains"
      * conditions
+     *
      * @param expression - Example: "1,2, 3"
      * @return - Stream of terms. Example: [ "1", "2", "3" ]
      */
     private Stream<String> tokenizeExpression(final String expression) {
         if (expression != null) {
             return Arrays.stream(expression.split(DELIMITER))
-                .map(String::trim)
-                .filter(token -> !token.isEmpty());
+                    .map(String::trim)
+                    .filter(token -> !token.isEmpty());
         } else {
             return Stream.empty();
         }
@@ -291,7 +346,7 @@ public class SearchExpressionQueryBuilder {
         } catch (final NumberFormatException e) {
             throw new NumberFormatException(
                     "Expected a decimal (float) value for field \"" + fieldName + "\" but was given string \"" +
-                    value + "\""
+                            value + "\""
             );
         }
     }
@@ -302,63 +357,46 @@ public class SearchExpressionQueryBuilder {
         } catch (final NumberFormatException e) {
             throw new NumberFormatException(
                     "Expected a decimal (double) value for field \"" + fieldName + "\" but was given string \"" +
-                    value + "\""
+                            value + "\""
             );
         }
     }
 
     /**
-     * Loads the specified Dictionary from the doc store.
-     * For each line, constructs an AND query for all terms on that line.
-     * All lines are combined into an OR query.
+     * Loads the specified Dictionary from the doc store. Each line is combined with AND logic.
      */
     private QueryBuilder buildDictionaryQuery(
             final String fieldName,
             final DocRef docRef,
             final ElasticIndexField indexField
     ) {
-        final String[] lines = readDictLines(docRef);
-
+        final String[] lines = wordListProvider.getWords(docRef);
         final BoolQueryBuilder builder = QueryBuilders.boolQuery();
 
         for (final String line : lines) {
-            BoolQueryBuilder mustQuery = QueryBuilders.boolQuery();
+            final BoolQueryBuilder mustQueries = QueryBuilders.boolQuery();
             final ElasticIndexFieldType elasticFieldType = indexField.getFieldUse();
 
             if (elasticFieldType.isNumeric()) {
-                tokenizeExpression(line)
-                        .map(val -> getNumber(fieldName, val))
-                        .forEach(number -> mustQuery.must(QueryBuilders.termQuery(fieldName, number)));
+                mustQueries.must(QueryBuilders.termQuery(fieldName, getNumber(fieldName, line)));
             } else if (elasticFieldType.equals(ElasticIndexFieldType.FLOAT)) {
-                tokenizeExpression(line)
-                        .map(val -> getFloat(fieldName, val))
-                        .forEach(number -> mustQuery.must(QueryBuilders.termQuery(fieldName, number)));
+                mustQueries.must(QueryBuilders.termQuery(fieldName, getFloat(fieldName, line)));
             } else if (elasticFieldType.equals(ElasticIndexFieldType.DOUBLE)) {
-                tokenizeExpression(line)
-                        .map(val -> getDouble(fieldName, val))
-                        .forEach(number -> mustQuery.must(QueryBuilders.termQuery(fieldName, number)));
+                mustQueries.must(QueryBuilders.termQuery(fieldName, getDouble(fieldName, line)));
             } else if (ElasticIndexFieldType.DATE.equals(indexField.getFieldUse())) {
-                tokenizeExpression(line)
-                        .map(val -> getDate(fieldName, val))
-                        .forEach(number -> mustQuery.must(QueryBuilders.termQuery(fieldName, number)));
+                mustQueries.must(QueryBuilders.termQuery(fieldName, getDate(fieldName, line)));
             } else {
-                tokenizeExpression(line)
-                        .forEach(term -> mustQuery.must(QueryBuilders.termQuery(fieldName, term)));
+                if (indexField.getFieldType().equals("keyword")) {
+                    mustQueries.must(buildKeywordQuery(fieldName, line));
+                } else {
+                    mustQueries.must(buildTextQuery(fieldName, line));
+                }
             }
 
-            builder.should(mustQuery);
+            builder.should(mustQueries);
         }
 
         return builder;
-    }
-
-    private String[] readDictLines(final DocRef docRef) {
-        final String words = wordListProvider.getCombinedData(docRef);
-        if (words == null) {
-            throw new ResourceNotFoundException("Dictionary \"" + docRef + "\" not found");
-        }
-
-        return words.trim().split("\n");
     }
 
     private boolean operatorHasChildren(final ExpressionOperator operator) {
